# idis_rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
docment/: ToDo.md  api_list.md  db_format.md  session.md  user_folder_tree.md
docment/server/api/: api_list.md  file_system.md
fs_template/user_ruid/: info.json
idis/: Cargo.toml
idis/src/: actix_server.rs  idis_core.rs  lib.rs  main.rs  mod.rs
idis/src/config/: language.rs  loader.rs  mod.rs
idis/src/db/: db_trait.rs  mod.rs  mongo_client.rs  query.rs  query_format.md
idis/src/localization/: i18n.rs
old/build_handlers/: file_api.rs  mod.rs
old/old1/: Cargo.toml
ruid/: Cargo.toml  README.md
ruid/src/: lib.rs  main.rs  prefix.rs  ruid.rs
src/: README.md  config.rs  lib.rs  main.rs  processor.rs
src/actix_middleware/: config.rs  handler.rs  mod.rs
src/actors/: ws.rs
src/build_handlers/: json_api.rs
src/db_handlers/: README.md  mongo_client.rs
src/file_system/: file_system.rs  file_type_detect.rs  meta_set.rs  mod.rs  perm_set.rs  save.rs
src/idis/: idis_core.rs  mod.rs
src/idis_server/: actix_server.rs  actix_server_config.rs  mod.rs
src/method/: get.rs
src/pipeline/: README.md  analyse.rs  mod.rs  perm_load.rs  processor.rs  session_check.rs
src/server/: mod.rs  server_trait.rs
src/share/: collection.rs
src/state_services/: connection_set.rs  err_set.rs  instruction_set.rs  mod.rs  reqest_set.rs  session.rs  state.rs  state_set.rs  user.rs  user_agent_set.rs  ws_set.rs
src/sys/: app_set.rs  init.rs  mod.rs  ws.rs
src/utils/: base64.rs  command.rs  custom_serializers_adapters.rs  err_set.rs  fs.rs  json_f.rs  logger.rs  mod.rs  multi_key_map.rs  ruid.rs  state.rs  user.rs
tf-idf-vectorizer/: Cargo.toml
tf-idf-vectorizer/src/: main.rs  tf_idf.rs
(+42 files in other folders)
