[package]
name = "idis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
env_logger = "0.11.5"
toml = "0.8.5"
rand = "0.8.5"
tokio-util = "0.7"
bytes = "1.7.1"
mime_guess = "2.0.5"
chrono = "0.4"
mongodb = "2.0"
rand_chacha = "0.3"